<resources>
    <string name="app_name">Desire And Achievement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="habit">Habit</string>
    <string name="todo">Todo</string>
    <string name="reward">Reward</string>
    <string name="tv_habit">HHH</string>
    <string name="tv_todo">TTT</string>
    <string name="tv_reward">RRR</string>
    <string name="new_habit_hint">Enter your new habit name</string>
    <string name="new_todo_hint">Enter your new todo name</string>
    <string name="new_reward_hint">Enter your new reward name</string>

    <string name="save">SAVE</string>

    <string name="gain_coin">Coin obtained</string>
    <string name="times_cycle">Total times every cycle</string>
    <string name="choose_cycle">Choose cycle length</string>
    <string name="choose">Choose</string>
    <string name="your_cycle">Your cycle</string>

    <string name="date">Date</string>
    <string name="ddl">Choose Deadline</string>
    <string name="choose_parent_of_new">Choose parent of new</string>
    <string name="parent">Parent</string>
    <string name="none">None</string>

    <string name="cost_coin">Coin consumed</string>
    <string name="repeat">Repeated</string>

    <string name="Coins">Coins:</string>
    <string name="default_coin_number">0</string>

    <string name="user_manual">User manual</string>
    <string name="language">Language</string>
    <string name="default_page">Default page</string>
    <string name="first_weekday">The first weekday</string>
    <string name="about">About</string>

    <string name="user_manual_text_info">
        This application is going to let you do better self-management.
        \nWin coins by finish habit task or todo. Use coins to self reward.
    </string>
    <string name="user_manual_label_1">
        GUIDE
    </string>
    <string name="user_manual_text_1">
        -Swipe left to finish a mission.
        \n-Swipe right to delete a mission.
        \n-Click + to create a habit, todo or reward.
        \n-Call drawer for more actions.
    </string>
    <string name="user_manual_label_2">
        HABIT
    </string>
    <string name="user_manual_text_2">
        Record your daily work here. For example: wake up before 7am, sleep before 11pm.
        \nEvery mission can be marked a price. Once the mission is done, you will win the price.
    </string>
    <string name="user_manual_label_3">
        TODO
    </string>
    <string name="user_manual_text_3">
        It is another list for win coins. It records all todo issue.
    </string>
    <string name="user_manual_label_4">
        REWARD
    </string>
    <string name="user_manual_text_4">
        Record your self reward here. For example: enjoy a cup of ice cream or buy a pair of NIKE shoes.
        \nIt also can be remarked a price. You should pay coins for your reward.\n\n\n\n
    </string>

    <string name="about_text">
        Developed by Yifeng Zhang and Zijun Yin.
        \nPowered by Prof. Wauters Jeroen, KULeuven.
        \n©2018 All rights reserved.
        \n
        \nDonate us if you like :)
    </string>

    <string name="title_activity_habit">HabitActivity</string>
    <string name="cycle">CycleAndTimes</string>
    <string name="times">Times</string>
    <string name="habitname">habitName</string>
    <string name="plus">+</string>
    <string name="coinNumber">coinNumber</string>
    <string name="next_ddl">Next DDL</string>
    <string name="todoname">todoName</string>
    <string name="expandableicon">expandableIcon</string>
    <string name="icontoanotheracivity">IconToAnotherActivity</string>
    <string name="ToAnotherActivity">ToAnotherActivity</string>
    <string name="icontoalertdialog">IconToAlertDialog</string>
    <string name="toalertdialog">ToAlertDialog</string>
    <string name="icontoswitch">IconToSwitch</string>
    <string name="toSwitch">ToSwitch</string>
    <string name="textselected">TextSelected</string>
    <string name="please_choose_your_language">Please Choose Your Language</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="rewardname">RewardName</string>
    <string name="isrepeat">isRepeat</string>
    <string name="todo_name">Todo Name</string>
    <string name="deadline">Deadline</string>
    <string name="overdue">OVERDUE</string>
    <string name="edit">edit</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>
    <string name="NewHabit">New Habit</string>

    <string name="NewTodo">New Todo</string>
    <string name="NewReward">New Reward</string>
    <string name="Habit">Habit</string>
    <string name="Todo">Todo</string>
    <string name="Reward">Reward</string>
    <string name="Monday">Monday</string>
    <string name="Sunday">Sunday</string>
    <string name="ChooseLanguage">Choose Language</string>
    <string name="chooseFirstDayOfWeek">Choose first day of week</string>

    <string name="AboutUs">About us</string>
    <string name="UserManual">User Manual</string>

    <string name="WarmFillAll">Please fill in all conditions!</string>
    <string name="WarmLessOfCoins">You do not have enough coins! Earn more coins then reward yourself</string>
    <string name="YouDeserve">You deserve it!</string>
    <string name="Awesome">AWESOME!</string>
    <string name="YouDidIt">You did it!</string>
    <string name="empty_not_saved">\"Error! Not saved\"</string>
    <string name="export_db">Export DB</string>
    <string name="import_db">Import DB</string>

</resources>
