<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_user_manual"
            android:icon="@drawable/ic_user_manual"
            android:title="@string/user_manual" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_first_weekday"
            android:icon="@drawable/ic_first_weekday"
            android:title="@string/first_weekday" />
        <item
            android:id="@+id/export_db"
            android:icon="@drawable/ic_export_db"
            android:title="@string/export_db"/>
        <item
            android:id="@+id/import_db"
            android:icon="@drawable/ic_import_db"
            android:title="@string/import_db"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>
    </group>

</menu>
